fixed procreate brush links

--- a/experiments/index.html
+++ b/experiments/index.html
@@ -31,8 +31,8 @@
 
     <h2>procreate brushes</h2>
     <ul>
-        <li><a href="https://github.com/razzieFox/experiments/blob/main/procreate-brushes/brushes/note_pen.brush">note pen</a></li>
-        <li><a href="https://github.com/razzieFox/experiments/blob/main/procreate-brushes/brushes/tilted_ghost.brush">tilted ghost</a></li>
+        <li><a href="https://razziefox.com/experiments-files/procreate-brushes/brushes/note_pen.brush">note pen</a></li>
+        <li><a href="https://razziefox.com/experiments-files/procreate-brushes/brushes/tilted_ghost.brush">tilted ghost</a></li>
         
     </ul>
 
