added screenshots for 'df-celeste'

--- a/experiments/index.html
+++ b/experiments/index.html
@@ -38,7 +38,13 @@
 
     <h2>delivery flaps, but in celeste classic</h2>
     <p>ever wanted to play as the bird from delivery flaps in celeste classic? well now you can</p>
-    <a href="/experiments/df-celeste/">link to the game</a></li>
+
+    <p><br>links:</p>
+    <ul>
+        <li><a href="df-celeste/">df-celeste</a></li>
+    </ul>
+
+    <img src="df-celeste/screenshot.png" alt="screenshot of the game 'celeste' but with a bird" width="384" height="384"> 
 
 </div>
 
