added dividers in experiments page

--- a/experiments/index.html
+++ b/experiments/index.html
@@ -36,6 +36,8 @@
         
     </ul>
 
+    <hr class="solid">
+
     <h2>delivery flaps, but in celeste classic</h2>
     <p>ever wanted to play as the bird from delivery flaps in celeste classic? well now you can</p>
 
