updated website with more details about myself

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>razzieFox ~ contact</title>
+  <title>razziefox ~ contact</title>
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/favicon.ico">
@@ -11,7 +11,7 @@
 <body>
 
 <div style="padding-left:16px" class="header">
-    <h2>razzieFox <small>(florencio)</small></h2>
+    <h2>razziefox <small>(florencio)</small></h2>
 </div>
 
 <div class="topnav">
@@ -25,7 +25,7 @@
 <div style="padding-left:16px">
 
     <h2>email</h2>
-    <p>You can simply send emails here: contact@razzieFox.com<br><br>please just be mindful to not spam it with junk :p</p>
+    <p>if you got any questions or just want to reach out to me, you can email me here: contact(at)razziefox.com<br><br>I'll try my best to respond as fast as possible!</p>
 
 </div>
 
