--- a/experiments/index.html
+++ b/experiments/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>razzieFox ~ experiments</title>
+  <title>razziefox ~ experiments</title>
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/favicon.ico">
@@ -11,7 +11,7 @@
 <body>
 
 <div style="padding-left:16px" class="header">
-    <h2>razzieFox <small>(florencio)</small></h2>
+    <h2>razziefox <small>(florencio)</small></h2>
 </div>
 
 <div class="topnav">
