--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>razzieFox</title>
+  <title>razziefox</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
@@ -11,7 +11,7 @@
 <body>
 
 <div style="padding-left:16px" class="header">
-    <h2>razzieFox <small>(florencio)</small></h2>
+    <h2>razziefox <small>(florencio)</small></h2>
 </div>
 
 <div class="topnav">
@@ -24,11 +24,19 @@
 
 <div style="padding-left:16px">
 
-    <h2>about</h2>
-    <p>Hello! My name is florencio! I am a hobbyist developer who makes tiny games and programs simply for fun.</p>
+    <h2>introduction</h2>
+    <p>hello, my name is Florencio and I'm a hobbyist developer who makes tiny games and programs simply for fun in my past time. For work, I primarly work in the FEC industry repairing pinsetters, arcade machines, and laser tag equipment.</p>
 
-    <h2>background</h2>
-    <p>I've primarly worked with gdscript, c, c#, and lua as my languages of choice but also golang, gml, and python on the side whenever I need to.</p>
+    <h2>beginnings</h2>
+    <p>some time in 2019, I had started off a small game for FBLA called "Slime Panic" in Love2D. 
+      Of course, due to COVID this ended up getting competitions cancelled for that year which meant the project would be carried over to next year. 
+      Eventually this project would soon become the game we love dearly much, "Delivery Flaps FBLA". During the year 2022, "Delivery Flaps FBLA" would make its first debut and compete along with other games in the same competition.
+      At the end, the game had reached finalists in nationals and would soon release July 3rd 2023. This marked the beginning of something. What's that something? idk
+    </p>
+
+    <h2>support</h2>
+    <p>if you enjoy my projects and would like to support them, you may support me financially on ko-fi with the button below. Thank you!</p>
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'Y8Y3CGX9G');kofiwidget2.draw();</script> 
 
 </div>
 
