--- a/legal/index.html
+++ b/legal/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>razzieFox ~ legal</title>
+  <title>razziefox ~ legal</title>
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/favicon.ico">
@@ -11,7 +11,7 @@
 <body>
 
 <div style="padding-left:16px" class="header">
-    <h2>razzieFox <small>(florencio)</small></h2>
+    <h2>razziefox <small>(florencio)</small></h2>
 </div>
 
 <div class="topnav">
@@ -28,11 +28,11 @@
 
     <hr class="solid">
 
-    <p>Florencio Olsen operates https://razzieFox.com/ website, games, and software.</p>
+    <p>Florencio Olsen operates https://razziefox.com/ website, games, and software.</p>
 
     <p>This page is used to inform website visitors and software/game users regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my website, software, and or software.</p>
 
-    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at https://razzieFox.com/legal/, unless otherwise defined in this Privacy Policy.</p>
+    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at https://razziefox.com/legal/, unless otherwise defined in this Privacy Policy.</p>
 
     <hr class="solid">
 
@@ -44,7 +44,7 @@
 
     <h3>Log Data</h3>
 
-    <p>We want to inform you that whenever you use my website "razzieFox.com", I may collect information that your device sends to us that is called Log Data. This Log Data may include information such as your computer’s Internet Protocol ("IP") address, browser version, pages of our Service that you visit, the time and date of your visit, the time spent on those pages, and other statistics.</p>
+    <p>We want to inform you that whenever you use my website "razziefox.com", I may collect information that your device sends to us that is called Log Data. This Log Data may include information such as your computer’s Internet Protocol ("IP") address, browser version, pages of our Service that you visit, the time and date of your visit, the time spent on those pages, and other statistics.</p>
 
     <hr class="solid">
 
@@ -52,7 +52,7 @@
 
     <p>Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your computer’s hard drive.</p>
 
-    <p>My website may use these "cookies" to hold game data stored locally within your browser of choice and WILL NOT leave your browser. If such behavior occurs, please report the problem to contact@razzieFox.com</p>
+    <p>My website may use these "cookies" to hold game data stored locally within your browser of choice and WILL NOT leave your browser. If such behavior occurs, please report the problem to contact@razziefox.com</p>
 
     <hr class="solid">
 
@@ -70,7 +70,7 @@
 
     <h3>Security</h3>
 
-    <p>I value your trust in running my software and games, thus personal information is not collected on my websites, games, and applications. If such collection occurs, please report the issue to contact@razzieFox.com</p>
+    <p>I value your trust in running my software and games, thus personal information is not collected on my websites, games, and applications. If such collection occurs, please report the issue to contact@razziefox.com</p>
 
     <hr class="solid">
 
@@ -82,7 +82,7 @@
 
     <h3>Children's Privacy</h3>
 
-    <p>My website, software, and games do not address anyone under the age of 13. I do not collect personal information at all, and if such collection occurs then please contact me at contact@razzieFox.com</p>
+    <p>My website, software, and games do not address anyone under the age of 13. I do not collect personal information at all, and if such collection occurs then please contact me at contact@razziefox.com</p>
 
     <hr class="solid">
 
@@ -94,7 +94,7 @@
 
     <h3>Contact</h3>
 
-    <p>If you have any questions or suggestions about my privacy policy, do not hesitate to contact me at contact@razzieFox.com</p>
+    <p>If you have any questions or suggestions about my privacy policy, do not hesitate to contact me at contact@razziefox.com</p>
 
 
 </div>
