--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div style="padding-left:16px">
 
     <h2>introduction</h2>
-    <p>hello, my name is Florencio and I'm a hobbyist developer who makes tiny games and programs simply for fun in my past time. For work, I primarly work in the FEC industry repairing pinsetters, arcade machines, and laser tag equipment.</p>
+    <p>hello, my name is Florencio and I'm a hobbyist developer who makes tiny games and programs simply for fun in my past time.</p>
   
 </div>
 
